[gd_scene load_steps=6 format=3 uid="uid://b0ivuwpcqlqjt"]

[ext_resource type="Script" path="res://scenes/playerScene/playersPicker.gd" id="1_h3ad4"]
[ext_resource type="Script" path="res://scenes/playerScene/colorPickerControl.gd" id="2_sr0pc"]
[ext_resource type="PackedScene" uid="uid://cal5ok8nygcem" path="res://components/colorPicker/colorsPicker.tscn" id="4_imtll"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iwr8t"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d7ljd"]
bg_color = Color(0.00392157, 0.0941176, 0.14902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_color = Color(0.85098, 0.423529, 0.423529, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20

[node name="playerScene" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_h3ad4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="playerName" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
placeholder_text = "Enter name"
alignment = 1
caret_blink = true
caret_blink_interval = 0.5

[node name="addPlayer" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "+"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxFlat_iwr8t")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="PlayerContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="colorPickerControl" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
script = ExtResource("2_sr0pc")

[node name="Panel" type="Panel" parent="colorPickerControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 139.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d7ljd")

[node name="Control" parent="colorPickerControl" instance=ExtResource("4_imtll")]
layout_mode = 1
offset_top = 147.0

[connection signal="text_submitted" from="VBoxContainer/HBoxContainer/playerName" to="." method="_on_add_player_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/addPlayer" to="." method="_on_add_player_pressed"]
[connection signal="gui_input" from="colorPickerControl" to="colorPickerControl" method="_on_gui_input"]
